# sandpip

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
sandpip/: __init__.py  cli.py  cli_v1.py  cli_v2.py  sandpip_v2_launcher
src/: sandpip.c  sandpip_v2.c
tests/: malicious.py  network_allowlist.py  test_backtrace_log.py  test_dynamic_dns.py  test_openat2.py  test_v2.py
