[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandpip"
version = "2.0.0"
description = "A secure wrapper for pip utilizing LD_PRELOAD sandboxing"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

[project.scripts]
sandpip = "sandpip.cli:main"
sandpip_v1 = "sandpip.cli_v1:main"
sandpip_v2 = "sandpip.cli_v2:main"
spip = "sandpip.cli:main"
spip1 = "sandpip.cli_v1:main"
spip2 = "sandpip.cli_v2:main"
